# macacos_mordedores

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: macacos_rotulos.csv
notebook/: macacos_mordedores.ipynb
src/macacos_mordedores/: utils.py
