[project]
name = "macacos-mordedores"
version = "0.1.0"
description = "Análise/classificação de macacos mordedores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100